# kdevelop-wakatime-plugin

./: .gitignore  CMakeLists.txt  README.md  wakatime-plugin.kdev4
.kdev4/: wakatime-plugin.kdev4
src/: CMakeLists.txt  wakatime-plugin.cpp  wakatime-plugin.h  wakatime-plugin.json
